--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -29,12 +29,10 @@
     padding: 0.8rem 2rem;
     margin: 1rem;
     font-size: 1.1rem;
-    font-family: var(--font-primary);
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.05em;
-    color: #f1f9e8;
-    background: #242424;
+    background: var(--background-color-secondary);
     border: none;
     cursor: pointer;
     transition: transform 0.2s ease, box-shadow 0.3s ease, background-position 0.5s ease;
@@ -55,8 +53,8 @@
     }
 
     &.decksButton {
-      color: #242424;
-      background: #f1f9e8;
+      color: var(--background-color-secondary);
+      background: var(--color-text-primary);
     }
   }
 }
