style: Changed styling on CardFilters and CardDetails modal to be more fitting with whole theme, changed how the cards grid works to look better

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -49,7 +49,7 @@
 
     &.playButton {
       color: #fff;
-      background: linear-gradient(45deg, #e676ad, #7b72f1);
+      background: var(--special-button-color);
     }
 
     &.decksButton {
