--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -27,4 +27,6 @@ button {
   --background-color-primary: #1c1c1c;
   --background-color-secondary: #242424;
   --background-color-tertiary: #0f1113;
+
+  --special-button-color: linear-gradient(45deg, #e676ad, #7b72f1);
 }
