--- a/src/components/DeckCreationModal.module.scss
+++ b/src/components/DeckCreationModal.module.scss
@@ -65,6 +65,10 @@
   font-size: 1.1rem;
   padding: 6px 8px;
   cursor: pointer;
+
+  &:hover {
+    opacity: 0.8;
+  }
 }
 
 .modalHeader .headerActions {
