--- a/src/components/PlayerPanel.module.scss
+++ b/src/components/PlayerPanel.module.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   gap: 0.75rem;
   background: var(--background-color-secondary);
+  max-height: calc(100vh - 120px);
 }
 
 .emptyPanel {
