--- a/src/components/PlayerPanel.module.scss
+++ b/src/components/PlayerPanel.module.scss
@@ -90,6 +90,12 @@
   font-size: 0.9rem;
 }
 
+.protagonistImage {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 .deckInfo {
   font-size: 0.85rem;
   opacity: 0.85;
